fixed URL in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <script>
     // Replace with your Google Apps Script URL
-    const scriptUrl = "https://https://script.google.com/macros/s/AKfycbyydDseHGAAxy8erMjtSauyaMVCxgRKBAzrgYMzLdd2qLKKX0X70A7KwlXm80shG0L_/exec.google.com/macros/s/YOUR_SCRIPT_ID/exec";
+    const scriptUrl = "https://script.google.com/macros/s/AKfycbyydDseHGAAxy8erMjtSauyaMVCxgRKBAzrgYMzLdd2qLKKX0X70A7KwlXm80shG0L_/exec";
     
     fetch(scriptUrl)
       .then(response => response.json())
