Add regulations data file to the data loading configuration

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         groupD: 'database/json_data/group-d-schedule.json',
         legend: 'database/json_data/legend.json',
         guidelines: 'database/json_data/guidelines.json',
+        regulations: 'database/json_data/regulations.json',
       };
 
       const promises = Object.entries(dataFiles).map(([key, url]) =>
